[package]
name = "cpiotools"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"
description = "Dump a CPIO's structure for easy comparisons"
documentation = "https://github.com/DeterminateSystems/cpiotools/"
homepage = "https://github.com/DeterminateSystems/cpiotools/"
repository = "https://github.com/DeterminateSystems/cpiotools/"


[[bin]]
name = "cpio-dump"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpio = "0.2.1"
sha2 = "0.10.2"
base64 = "0.13.0"
clap = { version = "4.2.4", features = ["default", "derive", "env"] }
